force-app/main/default/objects/Account/fields/GLOBAL_PICK__c.field-meta.xml
<CustomField>
    <fullName>GLOBAL_PICK__c</fullName>
    <label>GLOBAL PICK CI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GLOBAL_PICk</valueSetName>
    </valueSet>
</CustomField>