force-app/main/default/objects/Account/fields/TEST_CI__c.field-meta.xml
<CustomField>
    <fullName>TEST_CI__c</fullName>
    <externalId>true</externalId>
    <label>TEST CI</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>