force-app/main/default/objects/Account/fields/TEST_CI_PICK__c.field-meta.xml
<CustomField>
    <fullName>TEST_CI_PICK__c</fullName>
    <label>TEST CI GLOBAL PICK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>